gap fixed for nav bar

--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ footer .logo{
     flex-direction: column;
     height: 100%;
     padding: 70px 0px;
+    gap: 50px;
     justify-content: space-between;
     margin-bottom: 50px;
     box-shadow: none;
@@ -626,6 +627,7 @@ top: -170px;
     display: flex;
     flex-direction: column;
     height: 100%;
+    gap: 100px;
     padding: 70px 0px;
     justify-content: space-between;
     margin-bottom: 50px;
